--- a/weather3/css/style.css
+++ b/weather3/css/style.css
@@ -1,3 +1,86 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+caption,
+tfoot,
+thead,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: middle; }
+
 body {
   height: 100%;
   margin: 0px;
@@ -10,16 +93,29 @@ body {
   background-position: cover;
   font-family: 'Exo', sans-serif; }
 
+.container {
+  min-width: 100%;
+  max-width: 100%; }
+
 .col-lg-12 {
   padding: 5px; }
 
 .logo {
   font-family: 'Righteous', cursive;
-  font-size: 70px;
+  font-size: 30px;
   letter-spacing: 5px;
   color: rgba(255, 255, 255, 0.9);
   text-shadow: 0px -3px 5px rgba(0, 0, 0, 0.6), 0px -6px 5px rgba(117, 117, 117, 0.5);
   vertical-align: middle; }
+  @media only screen and (min-width: 24em) {
+    .logo {
+      font-size: 30px; } }
+  @media only screen and (min-width: 50em) {
+    .logo {
+      font-size: 50px; } }
+  @media only screen and (min-width: 73em) {
+    .logo {
+      font-size: 70px; } }
 
 .logo-left,
 .logo-right {
@@ -34,14 +130,27 @@ body {
 header span {
   display: inline-block; }
 header img {
-  max-height: 60px;
+  max-height: 30px;
+  height: 60vh;
   padding: -2px; }
+  @media only screen and (min-width: 24em) {
+    header img {
+      max-height: 30px;
+      height: 60vh; } }
+  @media only screen and (min-width: 50em) {
+    header img {
+      max-height: 40px;
+      height: 40vh; } }
+  @media only screen and (min-width: 73em) {
+    header img {
+      max-height: 70px;
+      height: 60vh; } }
 
 .form-group {
   width: 100%; }
 
 input {
-  width: 40%;
+  width: 70%;
   border-radius: 5px;
   border: 1px solid transparent;
   -webkit-box-shadow: 0px 0px 19px 5px #757575;
@@ -50,20 +159,34 @@ input {
   margin: 30px;
   display: inline-block;
   padding: 8px 12px;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.42857143;
   text-align: center;
   white-space: nowrap; }
+  @media only screen and (min-width: 24em) {
+    input {
+      font-size: 12px;
+      max-width: 60%; } }
+  @media only screen and (min-width: 50em) {
+    input {
+      font-size: 16px;
+      width: 50%;
+      max-width: 70%; } }
+  @media only screen and (min-width: 73em) {
+    input {
+      font-size: 18px;
+      width: 40%;
+      max-width: 50%; } }
 
-/*.form-control:focus{
-    -webkit-box-shadow: 0px 0px 19px 5px rgba(236, 218, 0, 1);
-    -moz-box-shadow: 0px 0px 19px 5pxrgba(236, 218, 0, 1);
-    box-shadow: 0px 0px 19px 5px rgba(236, 218, 0, 1);
-    border: 1px solid rgba(0,0,0,0);
-}*/
+.form-control:focus {
+  -webkit-box-shadow: 0px 0px 19px 5px #ecda00;
+  -moz-box-shadow: 0px 0px 19px 5pxrgba 236, 218, 0, 1;
+  box-shadow: 0px 0px 19px 5px #ecda00;
+  border: 1px solid transparent; }
+
 button {
-  width: 10%;
+  width: 30%;
   border-radius: 5px;
   border: 1px solid transparent;
   -webkit-box-shadow: 0px 0px 19px 5px #757575;
@@ -78,7 +201,7 @@ button {
   background: linear-gradient(to right, #ffaf4b 0%, #ff920a 100%);
   display: inline-block;
   padding: 8px 12px;
-  font-size: 18px;
+  font-size: 12px;
   color: #4c4c4c;
   letter-spacing: 1px;
   font-weight: 700;
@@ -86,9 +209,20 @@ button {
   text-align: center;
   white-space: nowrap;
   box-sizing: content-box; }
-
-.weather-img img {
-  max-height: 4vw; }
+  @media only screen and (min-width: 24em) {
+    button {
+      font-size: 12px;
+      max-width: 30%; } }
+  @media only screen and (min-width: 50em) {
+    button {
+      font-size: 16px;
+      width: 50%;
+      max-width: 20%; } }
+  @media only screen and (min-width: 73em) {
+    button {
+      font-size: 18px;
+      width: 40%;
+      max-width: 10%; } }
 
 .weather {
   background: rgba(31, 31, 31, 0.8) no-repeat center center fixed;
@@ -97,27 +231,100 @@ button {
 .box {
   font-weight: 500; }
 
-#current-temp {
-  font-size: 2vw; }
-
 .date-box {
-  font-size: 1.1vw; }
+  font-size: 10px; }
+  @media only screen and (min-width: 24em) {
+    .date-box {
+      font-size: 10px; } }
+  @media only screen and (min-width: 46.8em) {
+    .date-box {
+      font-size: 12px; } }
+  @media only screen and (min-width: 50em) {
+    .date-box {
+      font-size: 16px; } }
+  @media only screen and (min-width: 73em) {
+    .date-box {
+      font-size: 18px; } }
 
 /*current weather divs style*/
+.descript-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center; }
+
+.main-temp-and-icon {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center; }
+
+.current-icon {
+  width: 40%; }
+  @media only screen and (min-width: 24em) {
+    .current-icon {
+      width: 40%; } }
+  @media only screen and (min-width: 46.8em) {
+    .current-icon {
+      width: 40%; } }
+  @media only screen and (min-width: 50em) {
+    .current-icon {
+      width: 30%; } }
+  @media only screen and (min-width: 73em) {
+    .current-icon {
+      width: 40%; } }
+
 .weather-description div {
-  font-size: 18px;
-  margin: 0px -15px 2px -15px; }
+  font-size: 12px;
+  margin: 0px 0px 2px 0px; }
+  @media only screen and (min-width: 24em) {
+    .weather-description div {
+      font-size: 12px;
+      text-align: center; } }
+  @media only screen and (min-width: 46.8em) {
+    .weather-description div {
+      font-size: 12px;
+      text-align: center;
+      margin: 0px 0px 2px 0px; } }
+  @media only screen and (min-width: 50em) {
+    .weather-description div {
+      font-size: 15px;
+      margin: 0px -15px 2px 0px; } }
+  @media only screen and (min-width: 73em) {
+    .weather-description div {
+      font-size: 18px;
+      margin: 0px -15px 2px -15px; } }
 
 .title {
-  text-align: left; }
+  text-align: left;
+  border-bottom: 0.4px solid rgba(255, 255, 255, 0.6); }
 
 .values {
   text-align: right;
   float: right; }
 
 #location {
-  text-align: left;
-  font-size: 40px; }
+  width: 100%;
+  text-align: center;
+  font-size: 28px; }
+  @media only screen and (min-width: 24em) {
+    #location {
+      font-size: 28px;
+      text-align: center; } }
+  @media only screen and (min-width: 46.8em) {
+    #location {
+      font-size: 28px;
+      text-align: center; } }
+  @media only screen and (min-width: 50em) {
+    #location {
+      font-size: 34px;
+      text-align: left; } }
+  @media only screen and (min-width: 73em) {
+    #location {
+      font-size: 40px;
+      text-align: left; } }
 
 .current-weather-img {
   text-align: left; }
@@ -130,23 +337,29 @@ button {
   background-color: none; }
 
 .temp-current {
-  font-size: 45px;
-  text-align: left;
+  font-size: 23px;
+  text-align: center;
   padding-top: 10%;
-  margin-left: -10%; }
+  margin-left: 0; }
+  @media only screen and (min-width: 24em) {
+    .temp-current {
+      font-size: 23px;
+      text-align: center; } }
+  @media only screen and (min-width: 46.8em) {
+    .temp-current {
+      font-size: 28px;
+      text-align: center; } }
+  @media only screen and (min-width: 50em) {
+    .temp-current {
+      font-size: 34px;
+      text-align: center;
+      margin-left: 0%; } }
+  @media only screen and (min-width: 73em) {
+    .temp-current {
+      font-size: 40px;
+      text-align: left;
+      margin-left: -10%; } }
 
-/*current weather divs style*/
-/*.temp:nth-of-type(odd){
-    background-color: white;
-    color: black;
-    
-}
-
-.temp:nth-of-type(even){
-    background-color: darkblue;
-    color: yellow;
-    
-}*/
 .map-container {
   margin: 0px;
   padding-left: 0px;
@@ -161,8 +374,20 @@ button {
 
 /*Hourly weather divs style*/
 .hourly {
-  border-top: 1px solid white;
+  /*border-top: 0.5px solid rgba(255, 255, 255, 0.6);*/
   padding: 10px 5px 0px 5px; }
+  @media only screen and (min-width: 24em) {
+    .hourly {
+      font-size: 12px; } }
+  @media only screen and (min-width: 46.8em) {
+    .hourly {
+      font-size: 16px; } }
+  @media only screen and (min-width: 50em) {
+    .hourly {
+      font-size: 18px; } }
+  @media only screen and (min-width: 73em) {
+    .hourly {
+      font-size: 18px; } }
 
 .hour-img img {
   max-width: 30px;
@@ -170,7 +395,26 @@ button {
 
 .hours {
   padding: 0px;
-  margin: 0px; }
+  margin: 0px;
+  font-size: 12px;
+  border-bottom: 0.2px solid rgba(255, 255, 255, 0.6);
+  border-right: 0.2px solid rgba(255, 255, 255, 0.6); }
+  @media only screen and (min-width: 24em) {
+    .hours {
+      font-size: 12px;
+      border-bottom: 0.5px solid rgba(255, 255, 255, 0.6); } }
+  @media only screen and (min-width: 46.8em) {
+    .hours {
+      font-size: 16px;
+      border-bottom: 0.5px solid rgba(255, 255, 255, 0.6); } }
+  @media only screen and (min-width: 50em) {
+    .hours {
+      font-size: 18px;
+      border-bottom: 0.5px solid rgba(255, 255, 255, 0.6); } }
+  @media only screen and (min-width: 73em) {
+    .hours {
+      font-size: 18px;
+      border-bottom: none; } }
 
 .daily-container {
   padding: 0px;
@@ -183,28 +427,86 @@ button {
   margin-top: 5px; }
 
 .daily-icon {
-  max-width: 50px;
+  max-width: 30px;
   margin: -10px auto -2px auto; }
+  @media only screen and (min-width: 24em) {
+    .daily-icon {
+      max-width: 30px; } }
+  @media only screen and (min-width: 46.8em) {
+    .daily-icon {
+      max-width: 40px; } }
+  @media only screen and (min-width: 50em) {
+    .daily-icon {
+      max-width: 45px; } }
+  @media only screen and (min-width: 73em) {
+    .daily-icon {
+      max-width: 50px; } }
 
 .temp-day {
-  font-size: 18px;
-  padding-right: 5px; }
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: 12px; }
   .temp-day img {
-    max-width: 20px;
-    float: left;
-    vertical-align: middle; }
+    width: 20px;
+    vertical-align: middle;
+    padding-right: 3px; }
+  @media only screen and (min-width: 24em) {
+    .temp-day {
+      font-size: 12px; } }
+  @media only screen and (min-width: 46.8em) {
+    .temp-day {
+      font-size: 14px; } }
+  @media only screen and (min-width: 50em) {
+    .temp-day {
+      font-size: 18px; } }
+  @media only screen and (min-width: 73em) {
+    .temp-day {
+      font-size: 18px; } }
 
 .temp-night {
-  font-size: 18px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: 12px;
   color: rgba(235, 235, 235, 0.8); }
   .temp-night img {
     max-width: 18px;
     float: left;
-    vertical-align: middle; }
+    vertical-align: middle;
+    padding-right: 6px; }
+  @media only screen and (min-width: 24em) {
+    .temp-night {
+      font-size: 12px; } }
+  @media only screen and (min-width: 46.8em) {
+    .temp-night {
+      font-size: 14px; } }
+  @media only screen and (min-width: 50em) {
+    .temp-night {
+      font-size: 18px; } }
+  @media only screen and (min-width: 73em) {
+    .temp-night {
+      font-size: 18px; } }
 
 .forecast-description {
   margin-top: -10px;
-  font-size: 14px; }
+  font-size: 10px; }
+  @media only screen and (min-width: 24em) {
+    .forecast-description {
+      font-size: 10px; } }
+  @media only screen and (min-width: 46.8em) {
+    .forecast-description {
+      font-size: 14px; } }
+  @media only screen and (min-width: 50em) {
+    .forecast-description {
+      font-size: 14px; } }
+  @media only screen and (min-width: 73em) {
+    .forecast-description {
+      font-size: 16px; } }
 
 .no-gutter [class*="col-"] {
   padding-left: 0;
@@ -214,7 +516,20 @@ button {
   color: rgba(255, 255, 255, 0.7);
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-around;
+  font-size: 11px; }
+  @media only screen and (min-width: 24em) {
+    .footer {
+      font-size: 11px; } }
+  @media only screen and (min-width: 46.8em) {
+    .footer {
+      font-size: 12px; } }
+  @media only screen and (min-width: 50em) {
+    .footer {
+      font-size: 16px; } }
+  @media only screen and (min-width: 73em) {
+    .footer {
+      font-size: 16px; } }
   .footer a {
     color: rgba(255, 255, 255, 0.7); }
 
